--- a/src/lists/templates/home.html
+++ b/src/lists/templates/home.html
@@ -1,14 +1,16 @@
 <html>
-	<head>
-	<title>To-Do lists</title>
-	</head>
-	<body>
+<head>
+<title>To-Do lists</title>
+</head>
+<body>
 	<h1>You To-Do list</h1>
 	<form method="POST">
-	<input id = "id_new_item" placeholder="Enter a to_do item" />
+		<input id="id_new_item" placeholder="Enter a to_do item" />
 	</form>
-	<table id= "id_list_table">
-	<tr><td>{{new_item_text}}</td></tr>
+	<table id="id_list_table">
+		<tr>
+			<td>{{new_item_text}}</td>
+		</tr>
 	</table>
-	</body>
+</body>
 </html>
